Remove horizontal rule from footer

--- a/PortfolioWebApp.Presentation/Views/Shared/_Layout.cshtml
+++ b/PortfolioWebApp.Presentation/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
     @{
         string copyrightYears = DateTime.Now.Year != 2025 ? "2025-" + @DateTime.Now.Year.ToString() : DateTime.Now.Year.ToString();
     }
-    <footer class="border-top footer text-muted">
+    <footer class="footer text-muted">
         <div class="container">
             &copy;@copyrightYears Samuel Wallis
         </div>
