--- a/PortfolioWebApp.Presentation/Views/Home/Index.cshtml
+++ b/PortfolioWebApp.Presentation/Views/Home/Index.cshtml
@@ -5,4 +5,5 @@
 <div class="text-center">
     <h1 class="display-4">welcome 2 my webbed site</h1>
     <p><img src="/images/skeleton1.gif" /></p>
+    <p><a href="https://github.com/swallis21/PortfolioWebApp/">Repo</a></p>
 </div>
