mostly CSS changes -- making it a single-page app but it's not working yet. might just do it from scratch

--- a/PortfolioWebApp.Presentation/Views/Home/Index.cshtml
+++ b/PortfolioWebApp.Presentation/Views/Home/Index.cshtml
@@ -1,9 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home";
 }
 
 <div class="text-center">
     <h1 class="display-4">welcome 2 my webbed site</h1>
     <p><img src="/images/skeleton1.gif" /></p>
-    <p><a href="https://github.com/swallis21/PortfolioWebApp/">Repo</a></p>
 </div>
