--- a/PortfolioWebApp.Presentation/Views/Shared/_Layout.cshtml
+++ b/PortfolioWebApp.Presentation/Views/Shared/_Layout.cshtml
@@ -6,50 +6,64 @@
     <title>@ViewData["Title"] - Portfolio</title>
     <script type="importmap"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/font-awesome/dist/css/fontawesome.min.css" />
+    <link rel="stylesheet" href="~/lib/font-awesome/dist/css/solid.min.css" />
+    <link rel="stylesheet" href="~/css/theme.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PortfolioWebApp.Presentation.styles.css" asp-append-version="true" />
 </head>
-<body>
+<body data-bs-theme="dark">
     <header>
-        <div>
-            <p id="audio-controls" class="text-center"><span class="mt-2">click to groove</span></p>
-        </div>
-        <!-- <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">PortfolioWebApp.Presentation</a>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3 ms-1">
+            <div class="container">
+                <div id="audio-controls">
+                    <div id="music-play" class="leashed paused">
+                        <a><i class="fa-solid fa-play"></i></a>
+                    </div>
+                </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                    <ul class="navbar-nav flex-grow-1 ">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">home</a>
+                        </li>
+                        @*<li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Career">career</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="About">about</a>
+                        </li>*@
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://github.com/swallis21/PortfolioWebApp/">repo</a>
                         </li>
                     </ul>
                 </div>
             </div>
-        </nav>-->
+        </nav>
     </header>
     <div class="container">
         <main role="main" class="pb-3">
-            @RenderBody()
+            <div id="apprun-app">
+                @RenderBody()
+            </div>
         </main>
     </div>
     @{
         string copyrightYears = DateTime.Now.Year != 2025 ? "2025-" + @DateTime.Now.Year.ToString() : DateTime.Now.Year.ToString();
     }
-    <footer class="footer text-muted">
-        <div class="container">
-            &copy;@copyrightYears Samuel Wallis
+    <footer class="footer">
+        <div class="container text-end">
+            <a href="https://www.flaticon.com/free-icons/hare" class="text-muted">favicon by Freepik - Flaticon</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/apprun/dist/apprun.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/apprun.js" asp-append-version="true"></script>
     <script src="~/js/music.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
