--- a/PortfolioWebApp.Presentation/wwwroot/css/site.css
+++ b/PortfolioWebApp.Presentation/wwwroot/css/site.css
@@ -1,37 +1,1 @@
-html {
-  font-size: 14px;
-}
-
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
-
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  margin-bottom: 60px;
-}
-
-.form-floating > .form-control-plaintext::placeholder, .form-floating > .form-control::placeholder {
-  color: var(--bs-secondary-color);
-  text-align: end;
-}
-
-.form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
-  text-align: start;
-}
-
-audio
-{
-    width: 100%;
-    height: 30px;
-}
+html{font-size:14px;position:relative;min-height:100%}@media(min-width: 768px){html{font-size:16px}}body{margin-bottom:60px;display:flex;flex-direction:column;position:absolute;top:0;bottom:0;left:0;right:0}footer{margin-top:auto}@-webkit-keyframes throb{0%{-webkit-transform:scale(1);transform:scale(1);color:#ccc}50%{-webkit-transform:scale(1.5);transform:scale(2);color:#52e7c5}100%{-webkit-transform:scale(1);transform:scale(1);color:#ccc}}@keyframes throb{0%{-webkit-transform:scale(1);transform:scale(1);color:#ccc}50%{-webkit-transform:scale(1.5);transform:scale(2);color:#52e7c5}100%{-webkit-transform:scale(1);transform:scale(1);color:#ccc}}#audio-controls{padding-right:.5rem;border-right:1px solid #ccc}#audio-controls #music-play{color:#ccc;cursor:pointer}#audio-controls #music-play.leashed{-webkit-animation:throb 2s infinite;animation:throb 2s infinite}.btn:focus,.btn:active:focus,.btn-link.nav-link:focus,.form-control:focus,.form-check-input:focus{-webkit-box-shadow:0 0 0 .1rem #fff,0 0 0 .25rem #258cfb;box-shadow:0 0 0 .1rem #fff,0 0 0 .25rem #258cfb}.form-floating>.form-control-plaintext::-webkit-input-placeholder,.form-floating>.form-control::-webkit-input-placeholder{color:var(--bs-secondary-color);text-align:end}.form-floating>.form-control-plaintext::-moz-placeholder,.form-floating>.form-control::-moz-placeholder{color:var(--bs-secondary-color);text-align:end}.form-floating>.form-control-plaintext:-ms-input-placeholder,.form-floating>.form-control:-ms-input-placeholder{color:var(--bs-secondary-color);text-align:end}.form-floating>.form-control-plaintext::-ms-input-placeholder,.form-floating>.form-control::-ms-input-placeholder{color:var(--bs-secondary-color);text-align:end}.form-floating>.form-control-plaintext::placeholder,.form-floating>.form-control::placeholder{color:var(--bs-secondary-color);text-align:end}.form-floating>.form-control-plaintext:focus::-webkit-input-placeholder,.form-floating>.form-control:focus::-webkit-input-placeholder{text-align:start}.form-floating>.form-control-plaintext:focus::-moz-placeholder,.form-floating>.form-control:focus::-moz-placeholder{text-align:start}.form-floating>.form-control-plaintext:focus:-ms-input-placeholder,.form-floating>.form-control:focus:-ms-input-placeholder{text-align:start}.form-floating>.form-control-plaintext:focus::-ms-input-placeholder,.form-floating>.form-control:focus::-ms-input-placeholder{text-align:start}.form-floating>.form-control-plaintext:focus::placeholder,.form-floating>.form-control:focus::placeholder{text-align:start}
